--- a/personaje/personaje.csproj
+++ b/personaje/personaje.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Include="C:\Users\INFO-2\Desktop\TrabajoPersonaje.cs" Link="TrabajoPersonaje.cs" />
+  </ItemGroup>
+
 </Project>
